fix: volume scrollbar styles fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -74,6 +74,7 @@ body {
   width: 15vw;
   margin-top: 3rem;
   @media (max-width: 800px) {
+    margin-top: 6vw;
     width: 40vw;
   }
 }
